--- a/.github/workflows/JSON-push.yml
+++ b/.github/workflows/JSON-push.yml
@@ -29,10 +29,10 @@ jobs:
 
     - name: Commit and Push changes
       env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        push_bot: ${{ secrets.push_bot }}
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
         git add CSV/registros_chuvas.json
         git commit -m "Update registros_chuvas.json in CSV folder"
-        git push https://x-access-token:${GH_TOKEN}@github.com/YURISAMY/Erosao-costeira.git main
+        git push https://x-access-token:${push_bot}@github.com/YURISAMY/Erosao-costeira.git main
